fixed ascii art with adjust line spacing with css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,28 +36,8 @@ body {
     background-color: var(--bg-main);
 }
 
-body {
-    font-family: "JetBrains Mono", monospace;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-
-    background-color: var(--bg-main);
-}
-
-body {
-    font-family: "JetBrains Mono", monospace;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-
-    background-color: var(--bg-main);
-}
-
-#navbar-header {
+/*#navbar-header {
     animation: anime 0.5s ease forwards;
-    width: 100%;
-    justify-content: center;
 }
 
 @keyframes anime {
@@ -69,7 +49,7 @@ body {
         opacity: 1;
         transform: translate(-50%, -0px);
     }
-}
+}*/
 
 .body-cmd {
     margin-top: 20px;
@@ -149,6 +129,8 @@ body {
     color: var(--hover-muted);
 }
 
-.kaiden {
+.ascii-art {
     color: var(--text-main);
+    line-height: 1;
+    letter-spacing: 0;
 }
